@@ -1,3 +1,8 @@
+2017-02-15  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/79288
+	* g++.dg/tls/pr79288.C: New test.
+
 2017-02-15  Marek Polacek  <polacek@redhat.com>
 
 	PR c/79515
