@@ -1,3 +1,9 @@
+2017-02-15  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/79288
+	* decl.c (grokdeclarator): For static data members, handle thread_p
+	only after handling inline.
+
 2017-02-14  Marek Polacek  <polacek@redhat.com>
 
 	PR c++/79420
